--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             { id: "Curren16", titre: "Curren Night", marque: "Curren", prix: 15000, desc: "Parfaite pour les soirées avec son design sombre. État : Neuf.", img: "Curren16.jpeg" },
             { id: "Curren17", titre: "Curren Active", marque: "Curren", prix: 15000, desc: "Conçue pour un style de vie dynamique. État : Neuf.", img: "Curren17.jpeg" },
             { id: "Curren18", titre: "Curren Royal", marque: "Curren", prix: 15000, desc: "Un look royal pour une élégance suprême. État : Neuf.", img: "Curren18.jpeg" },
-            { id: "Megir1", titre: "Megir Chrono", marque: "Megir", prix: 17000, desc: "Un chronographe sportif au design audacieux. État : Neuf.", img: "megir1.jpg" },
+            { id: "Megir1", titre: "Megir Chrono", marque: "Megir", prix: 17000, desc: "Un chronographe sportif au design audacieux. État : Neuf.", img: "megir1.jpeg" },
             { id: "DW1", titre: "DW Classic", marque: "DW", prix: 12000, desc: "Simplicité minimaliste pour un style chic. État : Neuf.", img: "DW1.jpeg" },
             { id: "Chenxi7", titre: "Chenxi Gold Classic", marque: "Chenxi", prix: 22000, desc: "Une montre dorée classique pour un éclat discret. État : Neuf.", img: "Chenxi7.jpeg" },
             { id: "Chenxi1", titre: "Chenxi Gold Lux", marque: "Chenxi", prix: 22000, desc: "Un design doré luxueux pour briller en soirée. État : Neuf.", img: "Chenxi1.jpeg" },
