--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
             { id: "Montre10", titre: "Casio Steel", marque: "Casio", prix: 7000, desc: "Boîtier en acier pour une durabilité accrue. État : Neuf.", img: "Montre10.jpeg" },
             { id: "Montre11", titre: "Casio Neon", marque: "Casio", prix: 7000, desc: "Un affichage lumineux pour une lisibilité optimale. État : Neuf.", img: "Montre11.jpeg" },
             { id: "Montre12", titre: "Casio Urban", marque: "Casio", prix: 7000, desc: "Un look urbain et fonctionnel pour la ville. État : Neuf.", img: "Montre12.jpeg" },
-            { id: "Nibosi1", titre: "Nibosi Bold", marque: "Nibosi", prix: 13000, desc: "Un design audacieux pour un style affirmé. État : Neuf.", img: "Nibosi1.jpeg" },
+            { id: "Nibosi1", titre: "Nibosi Bold", marque: "Nibosi", prix: 17000, desc: "Un design audacieux pour un style affirmé. État : Neuf.", img: "Nibosi1.jpeg" },
             { id: "Nibosi2", titre: "Nibosi Sleek", marque: "Nibosi", prix: 13000, desc: "Élégance moderne avec une finition soignée. État : Neuf.", img: "Nibosi2.jpeg" },
             { id: "Nibosi3", titre: "Nibosi Chrono", marque: "Nibosi", prix: 17000, desc: "Un chronographe sophistiqué pour les passionnés. État : Neuf.", img: "Nibosi3.jpeg" },
             { id: "Nibosi4", titre: "Nibosi Gold", marque: "Nibosi", prix: 13000, desc: "Une touche dorée pour un look luxueux. État : Neuf.", img: "Nibosi4.jpeg" },
-            { id: "Nibosi5", titre: "Nibosi Black", marque: "Nibosi", prix: 13000, desc: "Noir intense pour une allure mystérieuse. État : Neuf.", img: "Nibosi5.jpeg" },
-            { id: "Nibosi6", titre: "Nibosi Sport", marque: "Nibosi", prix: 13000, desc: "Conçue pour les activités avec style. État : Neuf.", img: "Nibosi6.jpeg" },
-            { id: "Nibosi7", titre: "Nibosi Classic", marque: "Nibosi", prix: 13000, desc: "Un classique revisité avec une touche moderne. État : Neuf.", img: "Nibosi7.jpeg" },
-            { id: "Nibosi8", titre: "Nibosi Lux", marque: "Nibosi", prix: 13000, desc: "Un design raffiné pour les grandes occasions. État : Neuf.", img: "Nibosi8.jpeg" },
+            { id: "Nibosi5", titre: "Nibosi Black", marque: "Nibosi", prix: 17000, desc: "Noir intense pour une allure mystérieuse. État : Neuf.", img: "Nibosi5.jpeg" },
+            { id: "Nibosi6", titre: "Mini Focus Sport", marque: "Nibosi", prix: 17000, desc: "Conçue pour les activités avec style. État : Neuf.", img: "Nibosi6.jpeg" },
+            { id: "Nibosi7", titre: "Nibosi Classic", marque: "Nibosi", prix: 17000, desc: "Un classique revisité avec une touche moderne. État : Neuf.", img: "Nibosi7.jpeg" },
+            { id: "Nibosi8", titre: "Nibosi Lux", marque: "Nibosi", prix: 17000, desc: "Un design raffiné pour les grandes occasions. État : Neuf.", img: "Nibosi8.jpeg" },
             { id: "Mini focus", titre: "Mini Focus Edge", marque: "Mini Focus", prix: 17000, desc: "Un design tranchant pour un style unique. État : Neuf.", img: "Mini focus1.jpeg" },
             { id: "Mini focus2", titre: "Mini Focus Glow", marque: "Mini Focus", prix: 17000, desc: "Aiguilles lumineuses pour une lisibilité parfaite. État : Neuf.", img: "Mini focus2.jpeg" },
             { id: "Mini focus3", titre: "Mini Focus Elite", marque: "Mini Focus", prix: 17000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "Mini focus3.jpeg" },
