--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             z-index: 10;
         }
         .logo img {
-            max-height: 100px;
+            max-height: 70px;
             width: auto;
         }
         h1 {
@@ -217,7 +217,7 @@
     </div>
 
     <div id="accueil" class="section active">
-        <h1>Montres Pas Chères à Adjamé - Fofsang Montre 2025</h1>
+        <h1>Montres Pas Chères à Adjamé - Fofsang Montre </h1>
         <p>Découvrez nos montres neuves et stylées en Côte d'Ivoire !</p>
         <p class="cta">Choisissez votre montre et commandez via WhatsApp dès maintenant !</p>
         <div class="filtres">
