--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Montres Pas Chères Abidjan - Fofsang Montre 2025</title>
     <meta name="description" content="Montres neuves et stylées à Adjamé Black Market, dès 7000 FCFA. Commandez via WhatsApp !">
+    <meta name="google-site-verification" content="G59bSIgT4eHXkH1Lr31OdcGCdBx0_Ndx0NFc4bk9UaA" />
     <style>
         body {
             font-family: Arial, sans-serif;
