--- a/index.html
+++ b/index.html
@@ -248,7 +248,9 @@
     <div id="apropos" class="section">
         <h1>À propos</h1>
         <p>Je suis passionné par les montres pas chères depuis 10 ans et je partage ici ma collection unique !</p>
-        <p>Retrouvez-nous à Adjamé Black Market, le meilleur endroit pour des montres stylées en Côte d'Ivoire.</p>
+        <p>Retrouvez-nous à Adjamé Black Market, le meilleur endroit pour des montres stylées en Côte d'Ivoire. Achetez des montres pas chères à Abidjan chez Fofsang Montre 2025, disponibles dès 7000 FCFA
+
+</p>
     </div>
 
     <div id="contact" class="section">
