--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </div>
 
     <div id="accueil" class="section active">
-        <h1>Montres Pas Chères à Adjamé - Fofsang Montre </h1>
+        <h1>Montres Pas Chères à Adjamé - Sangfof Montre </h1>
         <p>Découvrez nos montres neuves et stylées en Côte d'Ivoire !</p>
         <p class="cta">Choisissez votre montre et commandez via WhatsApp dès maintenant !</p>
         <div class="filtres">
