--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
                 <option value="Edifice">Edifice</option>
                 <option value="Hilfiger">Hilfiger</option>
                 <option value="Mini Focus">Mini Focus</option>
-                <option value="Curren">Curren</option>
+                <option value="Curren">Curren</option>NaviForce1
+                <option value="NaviForce">NaviForce</option>
                 <option value="Bracelet">Bracelet</option>
                 <option value="Chaine">Chaine</option>
             </select>
@@ -284,6 +285,18 @@
             { id: "Mini focus", titre: "Mini Focus Edge", marque: "Mini Focus", prix: 17000, desc: "Un design tranchant pour un style unique. État : Neuf.", img: "Mini focus1.jpeg" },
             { id: "Mini focus2", titre: "Mini Focus Glow", marque: "Mini Focus", prix: 17000, desc: "Aiguilles lumineuses pour une lisibilité parfaite. État : Neuf.", img: "Mini focus2.jpeg" },
             { id: "Mini focus3", titre: "Mini Focus Elite", marque: "Mini Focus", prix: 17000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "Mini focus3.jpeg" },
+            { id: "NaviForce1", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce1.jpeg"
+         { id: "NaviForce8", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce8.jpeg"
+ { id: "NaviForce2", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce2.jpeg"
+ { id: "NaviForce3", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce3.jpeg"
+ { id: "NaviForce4", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce4.jpeg"
+ { id: "NaviForce5", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce5.jpeg"
+ { id: "NaviForce6", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce6.jpeg"
+ { id: "NaviForce7", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce7.jpeg"
+ { id: "NaviForce10", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce10.jpeg"
+ { id: "NaviForce11", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce11.jpeg"
+   { id: "NaviForce12", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce12.jpeg"
+  { id: "NaviForce9", titre: "NaviForce Elite", marque: " NaviForce", prix: 25000, desc: "Une montre sophistiquée pour les connaisseurs. État : Neuf.", img: "NaviForce9.jpeg"
             { id: "Rolex1", titre: "Rolex Explorer", marque: "Rolex", prix: 15000, desc: "Une montre robuste pour les aventures extrêmes. État : Neuf.", img: "Rolex1.jpeg" },
             { id: "Rolex2", titre: "Rolex Datejust", marque: "Rolex", prix: 15000, desc: "Élégance intemporelle avec date intégrée. État : Neuf.", img: "Rolex2.jpeg" },
             { id: "Rolex3", titre: "Rolex Submariner", marque: "Rolex", prix: 15000, desc: "Parfaite pour la plongée avec un style luxueux. État : Neuf.", img: "Rolex3.jpeg" },
